After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740901 - Many database operations no longer work, libmsi/table.c needs updating
Many database operations no longer work, libmsi/table.c needs updating
Status: RESOLVED FIXED
Product: msitools
Classification: Other
Component: libmsi
git
Other Linux
: Normal major
: 1.0
Assigned To: msitools maintainer(s)
msitools maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-11-29 19:49 UTC by Stephen Kitt
Modified: 2014-11-30 19:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Update libmsi/table.c (783 bytes, patch)
2014-11-29 19:49 UTC, Stephen Kitt
none Details | Review
Prevent null pointer dereference in memset (988 bytes, patch)
2014-11-30 17:49 UTC, Stephen Kitt
committed Details | Review

Description Stephen Kitt 2014-11-29 19:49:02 UTC
Created attachment 291802 [details] [review]
Update libmsi/table.c

Hi,

Currently tests 1, 10, 12, 13 and 19 in the testsuite fail; if you'd like the details I can provide them, but the fix is easy. I'm attaching a patch based on the changed made in Wine to fix this.

Regards,

Stephen
Comment 1 Marc-Andre Lureau 2014-11-30 02:54:34 UTC
Woot, thanks for the patch! Could you give just a bit of details? (update the patch with details would be nice)
Comment 2 Stephen Kitt 2014-11-30 17:48:33 UTC
I've added what little detail I have to the patch... It's a single commit from Wine, with not much explanation there.
Comment 3 Stephen Kitt 2014-11-30 17:49:09 UTC
Created attachment 291841 [details] [review]
Prevent null pointer dereference in memset
Comment 4 Stephen Kitt 2014-11-30 17:51:23 UTC
BTW the second part of the patch isn't necessary to fix the bug, I just left it there because it makes matching up git commits from Wine easier! (And it makes debugging easier...)
Comment 5 Marc-Andre Lureau 2014-11-30 19:40:12 UTC
Attachment 291841 [details] pushed as 56738e0 - Prevent null pointer dereference in memset