Prevent null pointer dereference in memset

This is copied from Wine's deb274226783ab886bdb44876944e156757efe2b
msi: Prevent call to memset with a null pointer in get_tablecolumns function.

https://bugzilla.gnome.org/show_bug.cgi?id=740901